--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('/Users/azel/Documents/Data Sets/DC Data/Parking Enforcement/Combined /Parking Violations.csv')"
+    "df = pd.read_csv('/Users/azel/Documents/Data Sets/DC Data/Parking Enforcement/Combined /Parking Violations.csv')"
    ]
   },
   {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,27 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.4 s, sys: 261 ms, total: 21.7 s\n",
-      "Wall time: 20.9 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "CPU times: user 22 s, sys: 472 ms, total: 22.5 s\n",
+      "Wall time: 21.3 s\n"
      ]
     }
    ],
@@ -348,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -357,20 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.6 s, sys: 204 ms, total: 20.8 s\n",
-      "Wall time: 20.6 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "CPU times: user 222 ms, sys: 129 ms, total: 351 ms\n",
+      "Wall time: 90.1 ms\n"
      ]
     }
    ],
@@ -381,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -390,10 +366,28 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 14424762 entries, 0 to 14424761\n",
-      "Data columns (total 1 columns):\n",
-      "TICKET_ISSUE_DATE    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1)\n",
-      "memory usage: 110.1 MB\n"
+      "Data columns (total 19 columns):\n",
+      "X                        float64\n",
+      "Y                        float64\n",
+      "OBJECTID                 int64\n",
+      "ROWID_                   float64\n",
+      "DAY_OF_WEEK              object\n",
+      "HOLIDAY                  float64\n",
+      "WEEK_OF_YEAR             float64\n",
+      "MONTH_OF_YEAR            float64\n",
+      "ISSUE_TIME               float64\n",
+      "VIOLATION_CODE           object\n",
+      "VIOLATION_DESCRIPTION    object\n",
+      "LOCATION                 object\n",
+      "RP_PLATE_STATE           object\n",
+      "BODY_STYLE               object\n",
+      "ADDRESS_ID               int64\n",
+      "STREETSEGID              float64\n",
+      "XCOORD                   int64\n",
+      "YCOORD                   int64\n",
+      "TICKET_ISSUE_DATE        datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(8), int64(4), object(6)\n",
+      "memory usage: 2.0+ GB\n"
      ]
     }
    ],
@@ -412,36 +406,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "now = datetime.now()"
+    "datetime_dtypes = ['<M8[ns]','datetime64[ns]']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derp = df['TICKET_ISSUE_DATE'].map(lambda x: x.strftime('%Y'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2019'"
+       "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "now.strftime('%Y')"
+    "df['TICKET_ISSUE_DATE'].dtype.str == 'datetime64[ns]'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -450,10 +453,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 29s, sys: 2.21 s, total: 1min 32s\n",
-      "Wall time: 1min 32s\n"
+      "CPU times: user 1min 31s, sys: 2.28 s, total: 1min 34s\n",
+      "Wall time: 1min 34s\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df['YEAR'] = df['TICKET_ISSUE_DATE'].map(lambda x: x.strftime('%Y'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -518,107 +532,106 @@
        "14424759    2013\n",
        "14424760    2013\n",
        "14424761    2013\n",
-       "Name: TICKET_ISSUE_DATE, Length: 14424762, dtype: object"
+       "Name: YEAR, Length: 14424762, dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "df['TICKET_ISSUE_DATE'].map(lambda x: x.strftime('%Y'))"
+    "df['YEAR']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 29s, sys: 2.85 s, total: 1min 32s\n",
-      "Wall time: 1min 33s\n"
+      "CPU times: user 1min 26s, sys: 1.74 s, total: 1min 27s\n",
+      "Wall time: 1min 28s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0           2011\n",
-       "1           2011\n",
-       "2           2011\n",
-       "3           2011\n",
-       "4           2011\n",
-       "5           2011\n",
-       "6           2011\n",
-       "7           2011\n",
-       "8           2011\n",
-       "9           2011\n",
-       "10          2011\n",
-       "11          2011\n",
-       "12          2011\n",
-       "13          2011\n",
-       "14          2011\n",
-       "15          2011\n",
-       "16          2011\n",
-       "17          2011\n",
-       "18          2011\n",
-       "19          2011\n",
-       "20          2011\n",
-       "21          2011\n",
-       "22          2011\n",
-       "23          2011\n",
-       "24          2011\n",
-       "25          2011\n",
-       "26          2011\n",
-       "27          2011\n",
-       "28          2011\n",
-       "29          2011\n",
-       "            ... \n",
-       "14424732    2013\n",
-       "14424733    2013\n",
-       "14424734    2013\n",
-       "14424735    2013\n",
-       "14424736    2013\n",
-       "14424737    2013\n",
-       "14424738    2013\n",
-       "14424739    2013\n",
-       "14424740    2013\n",
-       "14424741    2013\n",
-       "14424742    2013\n",
-       "14424743    2013\n",
-       "14424744    2013\n",
-       "14424745    2013\n",
-       "14424746    2013\n",
-       "14424747    2013\n",
-       "14424748    2013\n",
-       "14424749    2013\n",
-       "14424750    2013\n",
-       "14424751    2013\n",
-       "14424752    2013\n",
-       "14424753    2013\n",
-       "14424754    2013\n",
-       "14424755    2013\n",
-       "14424756    2013\n",
-       "14424757    2013\n",
-       "14424758    2013\n",
-       "14424759    2013\n",
-       "14424760    2013\n",
-       "14424761    2013\n",
+       "0           01\n",
+       "1           01\n",
+       "2           01\n",
+       "3           01\n",
+       "4           01\n",
+       "5           01\n",
+       "6           01\n",
+       "7           01\n",
+       "8           01\n",
+       "9           01\n",
+       "10          01\n",
+       "11          01\n",
+       "12          01\n",
+       "13          01\n",
+       "14          01\n",
+       "15          01\n",
+       "16          01\n",
+       "17          01\n",
+       "18          01\n",
+       "19          01\n",
+       "20          01\n",
+       "21          01\n",
+       "22          01\n",
+       "23          01\n",
+       "24          01\n",
+       "25          01\n",
+       "26          01\n",
+       "27          01\n",
+       "28          01\n",
+       "29          01\n",
+       "            ..\n",
+       "14424732    01\n",
+       "14424733    01\n",
+       "14424734    01\n",
+       "14424735    01\n",
+       "14424736    01\n",
+       "14424737    01\n",
+       "14424738    01\n",
+       "14424739    01\n",
+       "14424740    01\n",
+       "14424741    01\n",
+       "14424742    01\n",
+       "14424743    01\n",
+       "14424744    01\n",
+       "14424745    01\n",
+       "14424746    01\n",
+       "14424747    01\n",
+       "14424748    01\n",
+       "14424749    01\n",
+       "14424750    01\n",
+       "14424751    01\n",
+       "14424752    01\n",
+       "14424753    01\n",
+       "14424754    01\n",
+       "14424755    01\n",
+       "14424756    01\n",
+       "14424757    01\n",
+       "14424758    01\n",
+       "14424759    01\n",
+       "14424760    01\n",
+       "14424761    01\n",
        "Name: TICKET_ISSUE_DATE, Length: 14424762, dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time \n",
-    "df['TICKET_ISSUE_DATE'].apply(lambda x: x.strftime('%Y'))"
+    "df['TICKET_ISSUE_DATE'].apply(lambda x: x.strftime('%m'))"
    ]
   },
   {
