--- a/Master.ipynb
+++ b/Master.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Washington DC is a relatively small city. It only covers about 68 miles^2 compared to Baltimore's 92 miles^2 or New York City's 302 miles^2. However, the city draws in a large number of out non-resident commuters thanks to the Federal Government, [thriving tech scene](https://www.dcpolicycenter.org/publications/d-c-s-start-up-scene/), and [robust restaurant offerings](https://guide.michelin.com/us/washington-dc). Therefore, a large proportion of the vehicles moving through and parking in the city are made up of residents of Maryland and Virginia. One might assume that the habits of these drivers are essentially the same. However, trends in the data indicate otherwise. \n",
+    "Washington DC is a relatively small city. It only covers about 68 miles^2 compared to Baltimore's 92 miles^2 or New York City's 302 miles^2. However, the city draws in a large number of out non-resident commuters thanks to the Federal Government, [thriving tech scene](https://www.dcpolicycenter.org/publications/d-c-s-start-up-scene/), and [robust restaurant offerings](https://guide.michelin.com/us/washington-dc). Therefore, a large proportion of the vehicles moving through and parking in the city are made up of residents of Maryland and Virginia. One might assume that the parking habits of these drivers are essentially the same. However, trends in the data indicate otherwise. \n",
     "\n"
    ]
   },
@@ -463,6 +463,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two observations: \n",
+    "- The number of tickets by state remains proportional. Overall, the trends remain the same among states year by year.\n",
+    "- Maryland drivers are consistently issues more tickets than DC or VA license plates. \n",
+    "\n",
+    "Washington DC does receive a lot of commuters, so it could just indicate the higher volume of Maryland Drivers entering the District on a daily basis. One could hypothesize that the number of parking tickets issued is dependent on the volume of drivers commuting by car on a regular basis. Ostensibly, that means the distribution of tickets by type should roughly remain the same. That however, is not the case. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -655,6 +666,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data indicates that there are some trends that match up with the proportional hypothesis. For instance, the Meter Violation category indicates a distribution roughly proportional to the total tickets issued. However, it also makes up the majority of tickets issued. I'd like to take a more narrow look at a few categories to determine if this trend is universal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -731,10 +749,10 @@
     "             [['Illegal Parking Location', 'Obstructing Traffic','Residential Zone Violation']]).T\n",
     "\n",
     "\n",
-    "\"\"\"congestion = (round(pd.crosstab(df['Violation Bins'], \n",
-    "                                df['License Plate State'], \n",
-    "                                normalize = 'columns')*100, 2)  #Isolate my Congestion Columns\n",
-    "             [['Illegal Parking Location', 'Obstructing Traffic','Residential Zone Violation']])\"\"\"\n",
+    "# congestion = (round(pd.crosstab(df['Violation Bins'], \n",
+    "#                                 df['License Plate State'], \n",
+    "#                                 normalize = 'columns')*100, 2)  #Isolate my Congestion Columns\n",
+    "#              [['Illegal Parking Location', 'Obstructing Traffic','Residential Zone Violation']])\n",
     "\n",
     "del congestion.index.name\n",
     "\n",
@@ -809,6 +827,25 @@
     "plt.legend(loc = 1)\n",
     "\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This chart covers three categories:\n",
+    "\n",
+    "##### Illegal Parking Location\n",
+    "- Refers to when a car is parked in a location where it is never allowed, and indicates as such by a sign. For Example: \"No Parking Any Time\"\n",
+    "\n",
+    "##### Obstructing Traffic\n",
+    "- Refers to when a car is parked in or blocking a lane of traffic.\n",
+    "\n",
+    "##### Residential Zone Violation \n",
+    "- Refers to when a car is parked in an area reserved for a local resident. \n",
+    "\n",
+    "\n",
+    "This chart clearly indicates that Maryland Drivers are responsible for a more than proportional number of Obstructing Traffic and Residential Zone Tickets. However, these don't make enough of a difference to reject the traffic hypothesis from a global view. "
    ]
   },
   {
@@ -1920,5 +1957,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
